Changed to java 1.8 and also added jdk downloader